public interface AparelhoTelefonico {
    void ligar(String numero);
    void atender();
    void encerrarChamada();
    void acessarContatos();
}
